# sensowash-ble

./: .gitignore  README.md  pair.py  pyproject.toml  test_commands.py
docs/: PROTOCOL.md
examples/: demo.py  monitor.py  occupied.py
sensowash/: __init__.py  client.py  constants.py  exceptions.py  models.py  serial.py
