[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensowash-ble"
version = "0.3.0"
description = "Python BLE library for Duravit SensoWash smart toilets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "bleak>=0.21",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.urls]
Repository = "https://github.com/beezly/sensowash-ble"

[tool.setuptools.package-data]
sensowash = ["py.typed"]

[tool.ruff]
line-length = 100
